Mon Nov 18 13:29:55 1996  Tom Tromey  <tromey@cygnus.com>

	* aclocal.in (obsolete_macros): Include AM_SANITY_CHECK_CC; now
	part of autoconf proper.
	* m4/ccsanity.m4: Removed.

Sun Nov 17 12:25:17 1996  Tom Tromey  <tromey@cygnus.com>

	* automake.in (check_typos): Check to make sure EXTRA_ variables
	don't contain configure subs.
	(handle_dist_worker): Removed EXTRA_DIST_DIRS; not needed.

Fri Nov 15 18:58:04 1996  Tom Tromey  <tromey@cygnus.com>

	* tags-subd.am: Removed.

	* tags.am (tags-recursive): Removed.
	(TAGS): Depend on @DIRS@, @CONFIG@.  Use @CONFIG@ in rule.
	(ID): From tags-subd.am.
	
	* aclocal.in (obsolete_macros): Include AM_FUNC_FNMATCH.
	* automake.in (scan_configure): Recognize AC_FUNC_FNMATCH.
	* m4/fnmatch.m4: Removed (now in autoconf).

	* automake.in (initialize_per_input): Init de_ansi_objects.
	(handle_single_transform_list): Error if extension unrecognized.
	Set elements of de_ansi_objects.
	(get_object_extension): Don't push ANSI2KNR onto @all.
	(handle_yacc_lex_cxx): Put ANSI2KNR into dependency of all ._o
	files.
	(pretty_print_internal): Initialize $bol depending on the column.

Fri Nov 15 16:22:15 1996  Gordon Matzigkeit  <gord@gnu.ai.mit.edu>

	* library.am: Fixed references to LIBRARY according to new scheme.

	* libs.am, libs-clean.am: Removed references to LIBFILES.

	* automake.texi (A Library): doc fix

	* automake.in (handle_libraries): Deleted references to *LIBFILES,
	since we now have the full library name in the *LIBRARIES
	variable.
	(am_install_var): Removed `-no-all' option, which was only required
	for the LIBFILES hack.

Fri Nov 15 16:39:29 1996  Tom Tromey  <tromey@cygnus.com>

	* automake.in: Applied libtool-related patches from Gord.
	(scan_configure): Set CC configure var if AM_PROG_LIBTOOL seen.
	Also indicate that AC_CANONICAL_HOST was run.

	* Makefile.am (pkgdata_DATA): Removed aclocal.m4.

Thu Nov 14 23:11:09 1996  Tom Tromey  <tromey@cygnus.com>
