@@ -58,7 +58,9 @@ From Jason Molenda:
 
 * error messages should print ``[info blah blah]'' command when a
   certain part of the standards apply.  saw idea in message from
-  Craig Burley.
+  Craig Burley.  wouldn't it be really cool if compile-mode in Emacs
+  understood this convention, and you could click on such text to
+  go to the appropriate info page?
 
 !! should write autoconf-style doc entries for each m4 macro
 
