@@ -663,7 +663,7 @@ This is required if any C++ source is included.
 
 @item AC_PROG_YACC
 If a Yacc source file is seen, then you must either use this macro or
-declare the variable @samp{YACC} in @file{configure.in}.  The former is
+define the variable @samp{YACC} in @file{configure.in}.  The former is
 preferred.
 @cvindex AC_PROG_YACC
 @cvindex YACC
@@ -868,10 +868,9 @@ can share a single source file.  The source file must be listed in each
 Header files listed in a @samp{_SOURCES} definition will be included in
 the distribution but otherwise ignored.  In case it isn't obvious, you
 should not include the header file generated by @file{configure} in an
-@samp{_SOURCES} variable; this file should not be distributed.
-Lex (@samp{.l}) and yacc (@samp{.y}) files can also be listed; support
-for these should work but is still preliminary.
-@c lex & yacc should have a separate section
+@samp{_SOURCES} variable; this file should not be distributed.  Lex
+(@samp{.l}) and yacc (@samp{.y}) files can also be listed; see @ref{Yacc
+and Lex}.
 
 Sometimes it is useful to determine the programs that are to be built at
 configure time.  For instance, GNU @code{cpio} only builds @code{mt} and
@@ -1009,7 +1008,38 @@ This is the command used to actually link a C program.
 @section Yacc and Lex support
 
 Automake has somewhat idiosyncratic support for Yacc and Lex.
-FIXME: describe it here.
+
+Automake assumes that the @samp{.c} file generated by yacc (or lex)
+should be named using the basename of the input file.  That is, for a
+yacc source file @file{foo.y}, automake will cause the intermediate file
+to be named @file{foo.c} (as opposed to @file{y.tab.c}, which is more
+traditional).
+
+Yacc source files must end with the extension @samp{.y}.  Lex source
+files must have the extension @samp{.l}.  You should never explicitly
+mention the intermediate @samp{.c} file in any @samp{SOURCES} variable;
+only list the source file.
+
+The intermediate files generated by yacc (or lex) will be included in
+any distribution that is made.  That way the user doesn't need to have
+yacc or lex.
+
+If a yacc source file is seen, then your @file{configure.in} must define
+the variable @samp{YACC}.  This is most easily done by invoking the
+macro @samp{AC_PROG_YACC}.
+
+Similarly, if a lex source file is seen, then your @file{configure.in}
+must define the variable @samp{LEX}.  You can use @samp{AC_PROG_LEX} to
+do this.  Automake's lex support also requires that you use the
+@samp{AC_DECL_YYTEXT} macro -- automake needs to know the value of
+@samp{LEX_OUTPUT_ROOT}.
+
+Any program including a lex source file must be linked against
+@samp{@@LEXLIB@@}.  You can do this by puttins @samp{@@LEXLIB@@} into
+the appropriate @samp{LDADD} variable.
+
+Automake makes it possible to include multiple yacc (or lex) source
+files in a single program.
 
 
 @node C++
