@@ -1,4 +1,14 @@
+Tue Nov 19 19:03:30 1996  Tom Tromey  <tromey@cygnus.com>
+
+	* automake.in (initialize_per_input): Initialize output_header.
+	(generate_makefile): Set up output_header; print it before
+	output_rules.
+	(handle_footer): Put .SUFFIXES into output_header, for AIX.
+
 Mon Nov 18 13:29:55 1996  Tom Tromey  <tromey@cygnus.com>
+
+	* automake.in (handle_lib_objects): Push @LIBOBJS@ and @ALLOCA@
+	onto dependency list.
 
 	* aclocal.in (obsolete_macros): Include AM_SANITY_CHECK_CC; now
 	part of autoconf proper.
